cmake_minimum_required(VERSION 2.8)
set(CMAKE_COLOR_MAKEFILE 0)

if(ANDROID)
set(CMAKE_C_FLAGS ${ANDROID_C_FLAGS})
set(CMAKE_CXX_FLAGS ${ANDROID_CXX_FLAGS})
endif(ANDROID)

include_directories(
	include
	source/Irrlicht/zlib
	source/Irrlicht/jpeglib
	source/Irrlicht/libpng
	)

if(MSVC)
include_directories(
	"C:/Program Files (x86)/Microsoft DirectX SDK (June 2010)/Include"
	)

link_directories(
	"C:/Program Files (x86)/Microsoft DirectX SDK (June 2010)/Lib/x64"
	)
endif(MSVC)
	
add_definitions(-DPNG_THREAD_UNSAFE_OK -DPNG_NO_MMX_CODE -DPNG_NO_MNG_FEATURES
	-DIRRLICHT_EXPORTS
	-DIRR_COMPILE_WITH_DX9_DEV_PACK
	)

add_library(irrlicht SHARED
	source/Irrlicht/CBSPMeshFileLoader.cpp
	source/Irrlicht/CMD2MeshFileLoader.cpp
	source/Irrlicht/CMD3MeshFileLoader.cpp
	source/Irrlicht/CMS3DMeshFileLoader.cpp
	source/Irrlicht/CB3DMeshFileLoader.cpp
	source/Irrlicht/C3DSMeshFileLoader.cpp
	source/Irrlicht/COgreMeshFileLoader.cpp
	source/Irrlicht/COBJMeshFileLoader.cpp
	source/Irrlicht/CColladaFileLoader.cpp
	source/Irrlicht/CCSMLoader.cpp
	source/Irrlicht/CDMFLoader.cpp
	source/Irrlicht/CLMTSMeshFileLoader.cpp
	source/Irrlicht/CMY3DMeshFileLoader.cpp
	source/Irrlicht/COCTLoader.cpp
	source/Irrlicht/CXMeshFileLoader.cpp
	source/Irrlicht/CIrrMeshFileLoader.cpp
	source/Irrlicht/CSTLMeshFileLoader.cpp
	source/Irrlicht/CLWOMeshFileLoader.cpp
	source/Irrlicht/CPLYMeshFileLoader.cpp
	source/Irrlicht/CColladaMeshWriter.cpp
	source/Irrlicht/CIrrMeshWriter.cpp
	source/Irrlicht/CSTLMeshWriter.cpp
	source/Irrlicht/COBJMeshWriter.cpp
	source/Irrlicht/CPLYMeshWriter.cpp
	source/Irrlicht/CSkinnedMesh.cpp
	source/Irrlicht/CBoneSceneNode.cpp
	source/Irrlicht/CMeshSceneNode.cpp
	source/Irrlicht/CAnimatedMeshSceneNode.cpp
	source/Irrlicht/CAnimatedMeshMD2.cpp
	source/Irrlicht/CAnimatedMeshMD3.cpp
	source/Irrlicht/CQ3LevelMesh.cpp
	source/Irrlicht/CQuake3ShaderSceneNode.cpp
	source/Irrlicht/CAnimatedMeshHalfLife.cpp
	source/Irrlicht/CBillboardSceneNode.cpp
	source/Irrlicht/CCameraSceneNode.cpp
	source/Irrlicht/CDummyTransformationSceneNode.cpp
	source/Irrlicht/CEmptySceneNode.cpp
	source/Irrlicht/CGeometryCreator.cpp
	source/Irrlicht/CLightSceneNode.cpp
	source/Irrlicht/CMeshManipulator.cpp
	source/Irrlicht/CMetaTriangleSelector.cpp
	source/Irrlicht/COctreeSceneNode.cpp
	source/Irrlicht/COctreeTriangleSelector.cpp
	source/Irrlicht/CSceneCollisionManager.cpp
	source/Irrlicht/CSceneManager.cpp
	source/Irrlicht/CShadowVolumeSceneNode.cpp
	source/Irrlicht/CSkyBoxSceneNode.cpp
	source/Irrlicht/CSkyDomeSceneNode.cpp
	source/Irrlicht/CTerrainSceneNode.cpp
	source/Irrlicht/CTerrainTriangleSelector.cpp
	source/Irrlicht/CVolumeLightSceneNode.cpp
	source/Irrlicht/CCubeSceneNode.cpp
	source/Irrlicht/CSphereSceneNode.cpp
	source/Irrlicht/CTextSceneNode.cpp
	source/Irrlicht/CTriangleBBSelector.cpp
	source/Irrlicht/CTriangleSelector.cpp
	source/Irrlicht/CWaterSurfaceSceneNode.cpp
	source/Irrlicht/CMeshCache.cpp
	source/Irrlicht/CDefaultSceneNodeAnimatorFactory.cpp
	source/Irrlicht/CDefaultSceneNodeFactory.cpp
	source/Irrlicht/CParticleAnimatedMeshSceneNodeEmitter.cpp
	source/Irrlicht/CParticleBoxEmitter.cpp
	source/Irrlicht/CParticleCylinderEmitter.cpp
	source/Irrlicht/CParticleMeshEmitter.cpp
	source/Irrlicht/CParticlePointEmitter.cpp
	source/Irrlicht/CParticleRingEmitter.cpp
	source/Irrlicht/CParticleSphereEmitter.cpp
	source/Irrlicht/CParticleAttractionAffector.cpp
	source/Irrlicht/CParticleFadeOutAffector.cpp
	source/Irrlicht/CParticleGravityAffector.cpp
	source/Irrlicht/CParticleRotationAffector.cpp
	source/Irrlicht/CParticleSystemSceneNode.cpp
	source/Irrlicht/CParticleScaleAffector.cpp
	source/Irrlicht/CSceneNodeAnimatorCameraFPS.cpp
	source/Irrlicht/CSceneNodeAnimatorCameraMaya.cpp
	source/Irrlicht/CSceneNodeAnimatorCollisionResponse.cpp
	source/Irrlicht/CSceneNodeAnimatorDelete.cpp
	source/Irrlicht/CSceneNodeAnimatorFlyCircle.cpp
	source/Irrlicht/CSceneNodeAnimatorFlyStraight.cpp
	source/Irrlicht/CSceneNodeAnimatorFollowSpline.cpp
	source/Irrlicht/CSceneNodeAnimatorRotation.cpp
	source/Irrlicht/CSceneNodeAnimatorTexture.cpp
	source/Irrlicht/CNullDriver.cpp
	source/Irrlicht/COpenGLDriver.cpp
	source/Irrlicht/COpenGLNormalMapRenderer.cpp
	source/Irrlicht/COpenGLParallaxMapRenderer.cpp
	source/Irrlicht/COpenGLShaderMaterialRenderer.cpp
	source/Irrlicht/COpenGLTexture.cpp
	source/Irrlicht/COpenGLSLMaterialRenderer.cpp
	source/Irrlicht/COpenGLExtensionHandler.cpp
	source/Irrlicht/COGLES2Driver.cpp
	source/Irrlicht/COGLES2ExtensionHandler.cpp
	source/Irrlicht/COGLES2FixedPipelineShader.cpp
	source/Irrlicht/COGLES2NormalMapRenderer.cpp
	source/Irrlicht/COGLES2ParallaxMapRenderer.cpp
	source/Irrlicht/COGLES2Renderer2D.cpp
	source/Irrlicht/COGLES2SLMaterialRenderer.cpp
	source/Irrlicht/COGLES2Texture.cpp
	source/Irrlicht/COGLESDriver.cpp
	source/Irrlicht/COGLESExtensionHandler.cpp
	source/Irrlicht/COGLESTexture.cpp
	source/Irrlicht/CD3D8Driver.cpp
	source/Irrlicht/CD3D8NormalMapRenderer.cpp
	source/Irrlicht/CD3D8ParallaxMapRenderer.cpp
	source/Irrlicht/CD3D8ShaderMaterialRenderer.cpp
	source/Irrlicht/CD3D8Texture.cpp
	source/Irrlicht/CD3D9Driver.cpp
	source/Irrlicht/CD3D9HLSLMaterialRenderer.cpp
	source/Irrlicht/CD3D9NormalMapRenderer.cpp
	source/Irrlicht/CD3D9ParallaxMapRenderer.cpp
	source/Irrlicht/CD3D9ShaderMaterialRenderer.cpp
	source/Irrlicht/CD3D9Texture.cpp
	source/Irrlicht/CColorConverter.cpp
	source/Irrlicht/CImage.cpp
	source/Irrlicht/CImageLoaderBMP.cpp
	source/Irrlicht/CImageLoaderDDS.cpp
	source/Irrlicht/CImageLoaderJPG.cpp
	source/Irrlicht/CImageLoaderPCX.cpp
	source/Irrlicht/CImageLoaderPNG.cpp
	source/Irrlicht/CImageLoaderPSD.cpp
	source/Irrlicht/CImageLoaderTGA.cpp
	source/Irrlicht/CImageLoaderPPM.cpp
	source/Irrlicht/CImageLoaderWAL.cpp
	source/Irrlicht/CImageLoaderRGB.cpp
	source/Irrlicht/CImageWriterBMP.cpp
	source/Irrlicht/CImageWriterJPG.cpp
	source/Irrlicht/CImageWriterPCX.cpp
	source/Irrlicht/CImageWriterPNG.cpp
	source/Irrlicht/CImageWriterPPM.cpp
	source/Irrlicht/CImageWriterPSD.cpp
	source/Irrlicht/CImageWriterTGA.cpp
	source/Irrlicht/CVideoModeList.cpp
	source/Irrlicht/CFPSCounter.cpp
	source/Irrlicht/CSoftwareDriver.cpp
	source/Irrlicht/CSoftwareTexture.cpp
	source/Irrlicht/CTRFlat.cpp
	source/Irrlicht/CTRFlatWire.cpp
	source/Irrlicht/CTRGouraud.cpp
	source/Irrlicht/CTRGouraudWire.cpp
	source/Irrlicht/CTRNormalMap.cpp
	source/Irrlicht/CTRStencilShadow.cpp
	source/Irrlicht/CTRTextureFlat.cpp
	source/Irrlicht/CTRTextureFlatWire.cpp
	source/Irrlicht/CTRTextureGouraud.cpp
	source/Irrlicht/CTRTextureGouraudAdd.cpp
	source/Irrlicht/CTRTextureGouraudNoZ.cpp
	source/Irrlicht/CTRTextureGouraudWire.cpp
	source/Irrlicht/CZBuffer.cpp
	source/Irrlicht/CTRTextureGouraudVertexAlpha2.cpp
	source/Irrlicht/CTRTextureGouraudNoZ2.cpp
	source/Irrlicht/CTRTextureLightMap2_M2.cpp
	source/Irrlicht/CTRTextureLightMap2_M4.cpp
	source/Irrlicht/CTRTextureLightMap2_M1.cpp
	source/Irrlicht/CSoftwareDriver2.cpp
	source/Irrlicht/CSoftwareTexture2.cpp
	source/Irrlicht/CTRTextureGouraud2.cpp
	source/Irrlicht/CTRGouraud2.cpp
	source/Irrlicht/CTRGouraudAlpha2.cpp
	source/Irrlicht/CTRGouraudAlphaNoZ2.cpp
	source/Irrlicht/CTRTextureDetailMap2.cpp
	source/Irrlicht/CTRTextureGouraudAdd2.cpp
	source/Irrlicht/CTRTextureGouraudAddNoZ2.cpp
	source/Irrlicht/CTRTextureWire2.cpp
	source/Irrlicht/CTRTextureLightMap2_Add.cpp
	source/Irrlicht/CTRTextureLightMapGouraud2_M4.cpp
	source/Irrlicht/IBurningShader.cpp
	source/Irrlicht/CTRTextureBlend.cpp
	source/Irrlicht/CTRTextureGouraudAlpha.cpp
	source/Irrlicht/CTRTextureGouraudAlphaNoZ.cpp
	source/Irrlicht/CDepthBuffer.cpp
	source/Irrlicht/CBurningShader_Raster_Reference.cpp
	source/Irrlicht/CFileList.cpp
	source/Irrlicht/CFileSystem.cpp
	source/Irrlicht/CLimitReadFile.cpp
	source/Irrlicht/CMemoryFile.cpp
	source/Irrlicht/CReadFile.cpp
	source/Irrlicht/CWriteFile.cpp
	source/Irrlicht/CXMLReader.cpp
	source/Irrlicht/CXMLWriter.cpp
	source/Irrlicht/CWADReader.cpp
	source/Irrlicht/CZipReader.cpp
	source/Irrlicht/CPakReader.cpp
	source/Irrlicht/CNPKReader.cpp
	source/Irrlicht/CTarReader.cpp
	source/Irrlicht/CMountPointReader.cpp
	source/Irrlicht/irrXML.cpp
	source/Irrlicht/CAttributes.cpp
	source/Irrlicht/lzma/LzmaDec.c
	source/Irrlicht/CIrrDeviceSDL.cpp
	source/Irrlicht/CIrrDeviceLinux.cpp
	source/Irrlicht/CIrrDeviceConsole.cpp
	source/Irrlicht/CIrrDeviceStub.cpp
	source/Irrlicht/CIrrDeviceWin32.cpp
	source/Irrlicht/CIrrDeviceFB.cpp
	source/Irrlicht/CIrrDeviceAndroid.cpp
	source/Irrlicht/CLogger.cpp
	source/Irrlicht/COSOperator.cpp
	source/Irrlicht/Irrlicht.cpp
	source/Irrlicht/os.cpp
	source/Irrlicht/CGUIButton.cpp
	source/Irrlicht/CGUICheckBox.cpp
	source/Irrlicht/CGUIComboBox.cpp
	source/Irrlicht/CGUIContextMenu.cpp
	source/Irrlicht/CGUIEditBox.cpp
	source/Irrlicht/CGUIEnvironment.cpp
	source/Irrlicht/CGUIFileOpenDialog.cpp
	source/Irrlicht/CGUIFont.cpp
	source/Irrlicht/CGUIImage.cpp
	source/Irrlicht/CGUIInOutFader.cpp
	source/Irrlicht/CGUIListBox.cpp
	source/Irrlicht/CGUIMenu.cpp
	source/Irrlicht/CGUIMeshViewer.cpp
	source/Irrlicht/CGUIMessageBox.cpp
	source/Irrlicht/CGUIModalScreen.cpp
	source/Irrlicht/CGUIScrollBar.cpp
	source/Irrlicht/CGUISpinBox.cpp
	source/Irrlicht/CGUISkin.cpp
	source/Irrlicht/CGUIStaticText.cpp
	source/Irrlicht/CGUITabControl.cpp
	source/Irrlicht/CGUITable.cpp
	source/Irrlicht/CGUIToolBar.cpp
	source/Irrlicht/CGUIWindow.cpp
	source/Irrlicht/CGUIColorSelectDialog.cpp
	source/Irrlicht/CDefaultGUIElementFactory.cpp
	source/Irrlicht/CGUISpriteBank.cpp
	source/Irrlicht/CGUIImageList.cpp
	source/Irrlicht/CGUITreeView.cpp
	source/Irrlicht/zlib/adler32.c
	source/Irrlicht/zlib/compress.c
	source/Irrlicht/zlib/crc32.c
	source/Irrlicht/zlib/deflate.c
	source/Irrlicht/zlib/inffast.c
	source/Irrlicht/zlib/inflate.c
	source/Irrlicht/zlib/inftrees.c
	source/Irrlicht/zlib/trees.c
	source/Irrlicht/zlib/uncompr.c
	source/Irrlicht/zlib/zutil.c
	source/Irrlicht/jpeglib/jcapimin.c
	source/Irrlicht/jpeglib/jcapistd.c
	source/Irrlicht/jpeglib/jccoefct.c
	source/Irrlicht/jpeglib/jccolor.c
	source/Irrlicht/jpeglib/jcdctmgr.c
	source/Irrlicht/jpeglib/jchuff.c
	source/Irrlicht/jpeglib/jcinit.c
	source/Irrlicht/jpeglib/jcmainct.c
	source/Irrlicht/jpeglib/jcmarker.c
	source/Irrlicht/jpeglib/jcmaster.c
	source/Irrlicht/jpeglib/jcomapi.c
	source/Irrlicht/jpeglib/jcparam.c
	source/Irrlicht/jpeglib/jcprepct.c
	source/Irrlicht/jpeglib/jcsample.c
	source/Irrlicht/jpeglib/jctrans.c
	source/Irrlicht/jpeglib/jdapimin.c
	source/Irrlicht/jpeglib/jdapistd.c
	source/Irrlicht/jpeglib/jdatadst.c
	source/Irrlicht/jpeglib/jdatasrc.c
	source/Irrlicht/jpeglib/jdcoefct.c
	source/Irrlicht/jpeglib/jdcolor.c
	source/Irrlicht/jpeglib/jddctmgr.c
	source/Irrlicht/jpeglib/jdhuff.c
	source/Irrlicht/jpeglib/jdinput.c
	source/Irrlicht/jpeglib/jdmainct.c
	source/Irrlicht/jpeglib/jdmarker.c
	source/Irrlicht/jpeglib/jdmaster.c
	source/Irrlicht/jpeglib/jdmerge.c
	source/Irrlicht/jpeglib/jdpostct.c
	source/Irrlicht/jpeglib/jdsample.c
	source/Irrlicht/jpeglib/jdtrans.c
	source/Irrlicht/jpeglib/jerror.c
	source/Irrlicht/jpeglib/jfdctflt.c
	source/Irrlicht/jpeglib/jfdctfst.c
	source/Irrlicht/jpeglib/jfdctint.c
	source/Irrlicht/jpeglib/jidctflt.c
	source/Irrlicht/jpeglib/jidctfst.c
	source/Irrlicht/jpeglib/jidctint.c
	source/Irrlicht/jpeglib/jmemmgr.c
	source/Irrlicht/jpeglib/jmemnobs.c
	source/Irrlicht/jpeglib/jquant1.c
	source/Irrlicht/jpeglib/jquant2.c
	source/Irrlicht/jpeglib/jutils.c
	source/Irrlicht/jpeglib/jcarith.c
	source/Irrlicht/jpeglib/jdarith.c
	source/Irrlicht/jpeglib/jaricom.c
	source/Irrlicht/libpng/png.c
	source/Irrlicht/libpng/pngerror.c
	source/Irrlicht/libpng/pngget.c
	source/Irrlicht/libpng/pngmem.c
	source/Irrlicht/libpng/pngpread.c
	source/Irrlicht/libpng/pngread.c
	source/Irrlicht/libpng/pngrio.c
	source/Irrlicht/libpng/pngrtran.c
	source/Irrlicht/libpng/pngrutil.c
	source/Irrlicht/libpng/pngset.c
	source/Irrlicht/libpng/pngtrans.c
	source/Irrlicht/libpng/pngwio.c
	source/Irrlicht/libpng/pngwrite.c
	source/Irrlicht/libpng/pngwtran.c
	source/Irrlicht/libpng/pngwutil.c
	source/Irrlicht/aesGladman/aescrypt.cpp
	source/Irrlicht/aesGladman/aeskey.cpp
	source/Irrlicht/aesGladman/aestab.cpp
	source/Irrlicht/aesGladman/fileenc.cpp
	source/Irrlicht/aesGladman/hmac.cpp
	source/Irrlicht/aesGladman/prng.cpp
	source/Irrlicht/aesGladman/pwd2key.cpp
	source/Irrlicht/aesGladman/sha1.cpp
	source/Irrlicht/aesGladman/sha2.cpp
	source/Irrlicht/bzip2/blocksort.c
	source/Irrlicht/bzip2/huffman.c
	source/Irrlicht/bzip2/crctable.c
	source/Irrlicht/bzip2/randtable.c
	source/Irrlicht/bzip2/bzcompress.c
	source/Irrlicht/bzip2/decompress.c
	source/Irrlicht/bzip2/bzlib.c
	)

if(MSVC)
target_link_libraries(irrlicht gdi32 opengl32 d3dx9d winmm)
endif(MSVC)

if(NOT ANDROID)
add_executable(01.HelloWorld examples/01.HelloWorld/main.cpp)
target_link_libraries(01.HelloWorld irrlicht)
endif(NOT ANDROID)
